--- a/views/show.ejs
+++ b/views/show.ejs
@@ -19,5 +19,7 @@
         <input type="submit" value="Activate">
         <%}%>
     </form> 
+    <form action="/delete/<%= result[0].id %>?_method=DELETE" method="post">
+        <input type="submit" value="Delete">
 </body>
 </html>
